@startuml asymmetrical property CD
package "Asymmetrical Properties" {

    ' Base class for all asymmetrical properties
    abstract class "BaseAsymProperty<MonoBehaviour>" as base
    {
        + abstract void ApplyPerspectiveProfile(CharacterRole role)
    }

    abstract class "BaseAsymProperty <<T>>\nwhere T : Component" as baseT
    {
        # T AsymComponent
    }


    ' concrete implementations of asymmetrical properties
    class AsymGeometry 
    {
        - Mesh _humanMesh
        - Mesh _catMesh
        + override void ApplyPerspectiveProfile(CharacterRole role)
    }

    class AsymVisibility
    {
        - CharacterRole _activeRole
        + override void ApplyPerspectiveProfile(CharacterRole role)
    }

    class AsymMaterial
    {
        - Material _humanMaterial
        - Material _catMaterial
        + override void ApplyPerspectiveProfile(CharacterRole role)
    }

    class AsymLight
    {
        - Color _lightColorHuman
        - Color _lightColorCat
        - float _intensityHuman
        - float _intensityCat
        + override void ApplyPerspectiveProfile(CharacterRole role)
    }

    ' relationships
    base <|-- baseT

    baseT <|-- AsymGeometry: T::MeshFilter
    baseT <|- AsymMaterial: T::Renderer
    baseT <|-- AsymVisibility: T::Renderer
    AsymLight -|> baseT: T::Light
}
@enduml